[gd_scene load_steps=8 format=3 uid="uid://b43n0f8g2tfgg"]

[ext_resource type="Script" path="res://Main/Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bhn6biltlwltn" path="res://Rock/Rock.tscn" id="2_n16ha"]
[ext_resource type="LabelSettings" uid="uid://dp3nq7xvutycx" path="res://UI/assets/label.tres" id="3_3ifmn"]
[ext_resource type="StyleBox" uid="uid://dq4spl1cx1e3n" path="res://UI/assets/menu_button_normal.tres" id="4_s3a8e"]
[ext_resource type="StyleBox" uid="uid://be1kyo32r6i31" path="res://UI/assets/menu_button_hover.tres" id="5_15u5i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5key4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqpsb"]
content_margin_left = 24.0
content_margin_top = 24.0
content_margin_right = 24.0
bg_color = Color(0.482353, 0.278431, 0.439216, 0.564706)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.890196, 0.192157, 0.705882, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Main" type="Node"]
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0117647, 0.0627451, 0.00784314, 1)

[node name="Rocks" type="Node" parent="."]

[node name="Rock" parent="Rocks" instance=ExtResource("2_n16ha")]
position = Vector2(100, 362)

[node name="Rock2" parent="Rocks" instance=ExtResource("2_n16ha")]
position = Vector2(301, 518)

[node name="Rock3" parent="Rocks" instance=ExtResource("2_n16ha")]
position = Vector2(85, 542)

[node name="Rock4" parent="Rocks" instance=ExtResource("2_n16ha")]
position = Vector2(332, 447)

[node name="Rock5" parent="Rocks" instance=ExtResource("2_n16ha")]
position = Vector2(231, 382)

[node name="Bullets" type="Node" parent="."]

[node name="Ships" type="Node" parent="."]

[node name="MainData" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 29.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_5key4")

[node name="ShipList" type="HBoxContainer" parent="MainData"]
layout_mode = 2

[node name="MainMenu" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -160.0
offset_right = 143.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hqpsb")

[node name="VBox" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2

[node name="Message" type="Label" parent="MainMenu/VBox"]
layout_mode = 2
text = "Custom Message"
label_settings = ExtResource("3_3ifmn")
horizontal_alignment = 1

[node name="Buffer" type="Control" parent="MainMenu/VBox"]
custom_minimum_size = Vector2(0, 82)
layout_mode = 2

[node name="PlayButton" type="Button" parent="MainMenu/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.811765, 0.607843, 0.764706, 1)
theme_override_colors/font_hover_color = Color(0.980392, 0.745098, 0.890196, 1)
theme_override_styles/normal = ExtResource("4_s3a8e")
theme_override_styles/hover = ExtResource("5_15u5i")
text = "Play"

[node name="QuitButton" type="Button" parent="MainMenu/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.811765, 0.607843, 0.764706, 1)
theme_override_colors/font_hover_color = Color(0.980392, 0.745098, 0.890196, 1)
theme_override_styles/normal = ExtResource("4_s3a8e")
theme_override_styles/hover = ExtResource("5_15u5i")
text = "Quit"
